@@ -1,4 +1,8 @@
 2011-11-21  Jean-Louis Martineau <martineau@zmanda.com>
+	* device-src/s3.c: Disable the service_path if it is set to an empty
+	  string or '/', also remove trailing slash.
+
+2011-11-21  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amdump.pl: Log a 'START planner date' line on error'.
 
 2011-11-15  Jean-Louis Martineau <martineau@zmanda.com>
